Officers page (Partial)
Completed design for officers page, need work on responsiveness.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
-    <title> Title </title>
+    <title> IEEE SBU </title>
 </head>
 
 <body>
@@ -37,26 +37,26 @@
             <p class="desc">
                 One of the world’s largest technical professional organization bringing together members from all over the world for networking opportunities, advancement in career development, acquiring benefits, and much more.
             </p>
-            <div class="btn"><i class="fas fa-angle-down"></i></div>
+            <div class="btn"><a href="#About"><i class="fas fa-angle-down"></i></a></div>
         </div>
     </div>
 
     <!-- END LANDING -->
     <div class="container">
-        <div class="grid-container">
-            <h1 class=section-title>About IEEE</h1>
+        <div class="aboutus-grid-container">
+            <h1 class="section-title" id="About">About IEEE</h1>
             <div class="about">
                 <p class="subtitle">Mission</p>
-                <p class="mission-content">
+                <p class="mission-content sub-content">
                     IEEE's core purpose is to foster technological innovation and excellence for the benefit of humanity.
                 </p>
                 <p class="subtitle">Vision</p>
-                <p class="vision-content">
+                <p class="vision-content sub-content">
                     IEEE will be essential to the global technical community and to technical professionals everywhere, and be universally recognized for the contributions of technology and of technical professionals in improving global conditions.
                 </p>
 
                 <p class="subtitle">About Us</p>
-                <p class="aboutus-content">
+                <p class="aboutus-content sub-content">
                     Stony Brook IEEE student branch is an educational and well developed organization for students to pursue their dreams in becoming a well skilled professional engineer. Our goal is to spread the knowledge of theory and support undergraduate and graduate students who are interested in Electrical and Computer Science Engineering with field related resources.
                 </p>
             </div>
@@ -65,7 +65,113 @@
         <!--END ABOUT-->
 
         <div class="officers">
+            <div class="officers-grid-container">
+                <h1 class="section-title-a" id="Officers">The Brains Behind the Awesome</h1>
+                <div class="card president">
+                    <img class="card-img" src="imgs/kim.jpg" alt="president">
+                    <div class="card-content">
+                        <p class="name">Kimberly Gilot</p>
+                        <p class="position">President</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <ul class="card-links">
+                            <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
 
+                <div class="card vice-president">
+                    <img class="card-img" src="imgs/jecenia.jpg" alt="vice-president">
+                    <div class="card-content">
+                        <p class="name">Jecenia Carcamo</p>
+                        <p class="position">Vice-President</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <ul class="card-links">
+                            <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card secretary">
+                    <img class="card-img" src="imgs/ervin.jpg" alt="secretary">
+                    <div class="card-content">
+                        <p class="name">Ervin Wong</p>
+                        <p class="position">Secretary</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <ul class="card-links">
+                            <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card treasurer">
+                    <img class="card-img" src="imgs/thomas.jpg" alt="treasurer">
+                    <div class="card-content">
+                        <p class="name">Thomas Zhou</p>
+                        <p class="position">Treasurer</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <ul class="card-links">
+                            <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card events">
+                    <img class="card-img" src="imgs/luigia.jpg" alt="events-coordinastor">
+                    <div class="card-content">
+                        <p class="name">Luigia Than</p>
+                        <p class="position">Events Coordinator</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <ul class="card-links">
+                            <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card financial">
+                    <img class="card-img" src="imgs/ben.jpg" alt="financial-coordinator">
+                    <div class="card-content">
+                        <p class="name">Benjamin Huang</p>
+                        <p class="position">Financial Coordinator</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <ul class="card-links">
+                            <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card webmaster">
+                    <img class="card-img" src="imgs/raymond.jpg" alt="webmaster">
+                    <div class="card-content">
+                        <p class="name">Raymond Li</p>
+                        <p class="position">Webmaster</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <ul class="card-links">
+                            <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card historian">
+                    <img class="card-img" src="imgs/johnny.jpg" alt="historian">
+                    <div class="card-content">
+                        <p class="name">Shih Bin Tsao</p>
+                        <p class="position">Historian</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <ul class="card-links">
+                            <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
         </div>
 
         <!--END OFFICERS-->
