--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <div class="landing-content">
             <h1 class="title">INSTITUTE OF ELECTRICAL AND ELECTRONIC ENGINEERS</h1>
             <p class="desc">
-                One of the world’s largest technical professional organization bringing together members from all over the world for networking opportunities, advancement in career development, acquiring benefits, and much more.
+                One of the world’s largest technical professional organization bringing together members from all over
+                the world for networking opportunities, advancement in career development, acquiring benefits, and much
+                more.
             </p>
             <div class="btn"><a href="#About"><i class="fas fa-angle-down"></i></a></div>
         </div>
@@ -48,16 +50,22 @@
             <div class="about">
                 <p class="subtitle">Mission</p>
                 <p class="mission-content sub-content">
-                    IEEE's core purpose is to foster technological innovation and excellence for the benefit of humanity.
+                    IEEE's core purpose is to foster technological innovation and excellence for the benefit of
+                    humanity.
                 </p>
                 <p class="subtitle">Vision</p>
                 <p class="vision-content sub-content">
-                    IEEE will be essential to the global technical community and to technical professionals everywhere, and be universally recognized for the contributions of technology and of technical professionals in improving global conditions.
+                    IEEE will be essential to the global technical community and to technical professionals everywhere,
+                    and be universally recognized for the contributions of technology and of technical professionals in
+                    improving global conditions.
                 </p>
 
                 <p class="subtitle">About Us</p>
                 <p class="aboutus-content sub-content">
-                    Stony Brook IEEE student branch is an educational and well developed organization for students to pursue their dreams in becoming a well skilled professional engineer. Our goal is to spread the knowledge of theory and support undergraduate and graduate students who are interested in Electrical and Computer Science Engineering with field related resources.
+                    Stony Brook IEEE student branch is an educational and well developed organization for students to
+                    pursue their dreams in becoming a well skilled professional engineer. Our goal is to spread the
+                    knowledge of theory and support undergraduate and graduate students who are interested in Electrical
+                    and Computer Science Engineering with field related resources.
                 </p>
             </div>
         </div>
@@ -72,7 +80,8 @@
                     <div class="card-content">
                         <p class="name">Kimberly Gilot</p>
                         <p class="position">President</p>
-                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.</p>
                         <ul class="card-links">
                             <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                             <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
@@ -85,7 +94,8 @@
                     <div class="card-content">
                         <p class="name">Jecenia Carcamo</p>
                         <p class="position">Vice-President</p>
-                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.</p>
                         <ul class="card-links">
                             <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                             <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
@@ -98,7 +108,8 @@
                     <div class="card-content">
                         <p class="name">Ervin Wong</p>
                         <p class="position">Secretary</p>
-                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.</p>
                         <ul class="card-links">
                             <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                             <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
@@ -111,7 +122,8 @@
                     <div class="card-content">
                         <p class="name">Thomas Zhou</p>
                         <p class="position">Treasurer</p>
-                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.</p>
                         <ul class="card-links">
                             <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                             <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
@@ -124,7 +136,8 @@
                     <div class="card-content">
                         <p class="name">Luigia Than</p>
                         <p class="position">Events Coordinator</p>
-                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.</p>
                         <ul class="card-links">
                             <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                             <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
@@ -137,7 +150,8 @@
                     <div class="card-content">
                         <p class="name">Benjamin Huang</p>
                         <p class="position">Financial Coordinator</p>
-                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.</p>
                         <ul class="card-links">
                             <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                             <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
@@ -150,7 +164,8 @@
                     <div class="card-content">
                         <p class="name">Raymond Li</p>
                         <p class="position">Webmaster</p>
-                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.</p>
                         <ul class="card-links">
                             <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                             <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
@@ -163,7 +178,8 @@
                     <div class="card-content">
                         <p class="name">Shih Bin Tsao</p>
                         <p class="position">Historian</p>
-                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.</p>
                         <ul class="card-links">
                             <li><a class="linkedin" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                             <li><a class="github" href="" target="_blank"><i class="fab fa-github"></i></a></li>
@@ -176,8 +192,12 @@
 
         <!--END OFFICERS-->
 
-        <div class="events">
-
+        <div class="upcoming">
+            <h1 class="section-title-a section-title-events">Upcoming Events</h1>
+            <iframe class="calendar"
+                src="https://calendar.google.com/calendar/embed?src=37nunjopsiinigv2n83314i004%40group.calendar.google.com&ctz=America%2FNew_York"
+                style="border: 0" width="800" height="600" frameborder="0" scrolling="no">
+            </iframe>
         </div>
 
         <!--END EVENTS-->
@@ -189,10 +209,20 @@
         <!--END MEMORIES-->
 
         <div class="contact">
-
+            <div class="contact-content">
+                <h1 class="section-title section-title-contact">Contact Us!</h1>
+                <p class="address">Stony Brook, New York 11794-2350<br>Light Engineering Bldg. Rm. 175</p>
+                <p class="email"> ieeesunysb@gmail.com</p>
+                <ul class="contact-links">
+                    <li class="fb"><a href=""></a></li>
+                    <li class="github"><a href=""></a></li>
+                </ul>
+            </div>
         </div>
 
         <!--END CONTACT-->
 
     </div>
-</body></html>
+</body>
+
+</html>
