Fixed contact footer

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         <!--END OFFICERS-->
 
-        <div class="upcoming">
+        <div class="upcoming" id="Events">
             <h1 class="section-title-a section-title-events">Upcoming Events</h1>
             <iframe class="calendar"
                 src="https://calendar.google.com/calendar/embed?src=37nunjopsiinigv2n83314i004%40group.calendar.google.com&ctz=America%2FNew_York"
@@ -208,14 +208,22 @@
 
         <!--END MEMORIES-->
 
-        <div class="contact">
+        <div class="contact" id="Contact">
             <div class="contact-content">
-                <h1 class="section-title section-title-contact">Contact Us!</h1>
-                <p class="address">Stony Brook, New York 11794-2350<br>Light Engineering Bldg. Rm. 175</p>
-                <p class="email"> ieeesunysb@gmail.com</p>
+                <h1 class="section-title section-title-contact">Connect with Us</h1>
+                <div class="contact-content-p">
+                    <div class="contact-content-sub">
+                        <i class="fas fa-home"></i>
+                        <p class="address">Stony Brook, New York 11794-2350<br>Light Engineering Bldg. Rm. 175</p>
+                    </div>
+                    <div class="contact-content-sub">
+                        <i class="fas fa-envelope"></i>
+                        <p class="email"> ieeesunysb@gmail.com</p>
+                    </div>
+                </div>
                 <ul class="contact-links">
-                    <li class="fb"><a href=""></a></li>
-                    <li class="github"><a href=""></a></li>
+                    <li class="fb"><a href=""><i class="fab fa-facebook"></i></a></li>
+                    <li class="github"><a href=""><i class="fab fa-github"></i></a></li>
                 </ul>
             </div>
         </div>
