Events Responsive Fix
Fixed the responsiveness issue of the events section.

--- a/index.html
+++ b/index.html
@@ -194,10 +194,12 @@
 
         <div class="upcoming" id="Events">
             <h1 class="section-title-a section-title-events">Upcoming Events</h1>
-            <iframe class="calendar"
-                src="https://calendar.google.com/calendar/embed?src=37nunjopsiinigv2n83314i004%40group.calendar.google.com&ctz=America%2FNew_York"
-                style="border: 0" width="800" height="600" frameborder="0" scrolling="no">
-            </iframe>
+            <div class="calendar-container">
+                <iframe class="calendar"
+                    src="https://calendar.google.com/calendar/embed?src=37nunjopsiinigv2n83314i004%40group.calendar.google.com&ctz=America%2FNew_York"
+                    style="border: 0" width="800" height="600" frameborder="0" scrolling="no">
+                </iframe>
+            </div>
         </div>
 
         <!--END EVENTS-->
