Minor style fixes

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <img class="card-img" src="imgs/jecenia.jpg" alt="vice-president">
                     <div class="card-content">
                         <p class="name">Jecenia Carcamo</p>
-                        <p class="position">Vice-President</p>
+                        <p class="position">Vice President</p>
                         <p class="personal-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua.</p>
                         <ul class="card-links">
