--- a/index.html
+++ b/index.html
@@ -205,7 +205,24 @@
         <!--END EVENTS-->
 
         <div class="memories">
-
+            <h1 class="section-title-a section-title-memories">Memories</h1>
+            <div class="memories-grid-container">
+                <div class="mem-card mem-card-1">
+                    <a href="#"><p class="mem-event-name">Involvement Fair 2018</p></a>
+                </div>
+                <div class="mem-card mem-card-2">
+                    <a href="#"><p class="mem-event-name">Student Professor Mixer 2018</p></a>
+                </div>
+                <div class="mem-card mem-card-3">
+                    <a href="#"><p class="mem-event-name">ESE218 Review 2017</p></a>
+                </div>
+                <div class="mem-card mem-card-4">
+                    <a href="#"><p class="mem-event-name">IEEE Student Conference Region 1, 2017</p></a>
+                </div>
+                <div class="mem-card mem-card-5">
+                    <a href="#"><p class="mem-event-name">PCB Design Workshop 2015</p></a>
+                </div>
+            </div>
         </div>
 
         <!--END MEMORIES-->
