--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <a href="#"><p class="mem-event-name">ESE218 Review 2017</p></a>
                 </div>
                 <div class="mem-card mem-card-4">
-                    <a href="#"><p class="mem-event-name">IEEE Student Conference Region 1, 2017</p></a>
+                    <a href="#"><p class="mem-event-name">IEEE Student Conference <br> Region 1, 2017</p></a>
                 </div>
                 <div class="mem-card mem-card-5">
                     <a href="#"><p class="mem-event-name">PCB Design Workshop 2015</p></a>
