--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
     <!-- END LANDING -->
     <div class="container">
-        <div class="aboutus-grid-container">
-            <h1 class="section-title" id="About">About IEEE</h1>
+        <div class="aboutus-grid-container" id="About">
+            <h1 class="section-title">About IEEE</h1>
             <div class="about">
                 <p class="subtitle">Mission</p>
                 <p class="mission-content sub-content">
@@ -72,7 +72,7 @@
 
         <!--END ABOUT-->
 
-        <div class="officers">
+        <div class="officers" id="Officers">
             <div class="officers-grid-container">
                 <h1 class="section-title-a" id="Officers">The Brains Behind the Awesome</h1>
                 <div class="card president">
@@ -204,7 +204,7 @@
 
         <!--END EVENTS-->
 
-        <div class="memories">
+        <div class="memories" id="Memories">
             <h1 class="section-title-a section-title-memories">Memories</h1>
             <div class="memories-grid-container">
                 <div class="mem-card mem-card-1">
